<?xml version="1.0"?>
<package>
  <name>kafa_tutorial</name>
  <version>0.1.0</version>
  <description>The kafa_tutorial package</description>

  <maintainer email="kim.songhyon@gmail.com">Song-Hyon Kim</maintainer>
  <license>MIT</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/kafa_tutorial</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
  </export>

</package>
